# Rtype

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  Readme  build.bat  build.sh  cmake_install.cmake  conanfile.txt  doc.sh  install.bat  install.sh  main.cpp  rtype-client  rtype-server  to_delete.cpp
.github/workflows/: .coderabbit.yml  SyncRepo.yml  ai_coderabbit.yml  ci-cd.yml  clang_format_check.yml  doxygen_check.yml  main.yml
Network/: Packet.hpp  PacketManager.cpp  PacketManager.hpp  PacketType.hpp  Packetmanager.hpp  Paquet.hpp  Status.hpp  ThreadSafeList.cpp  ThreadSafeList.hpp  network.hpp  networkModule.hpp
Network/data/: BossStateData.hpp  ConnectData.hpp  DeadData.hpp  DisconnectData.hpp  EnemySpawnData.hpp  EntitySpawnData.hpp  HubData.hpp  JoinData.hpp  LeaderData.hpp  MoveData.hpp  PlayersPos.hpp  ScoreData.hpp  StartData.hpp
Networking/: networkModule.cpp  networkModule.hpp
RFC/: BeginData.hpp  DeadData.hpp  EndData.hpp  EnemySpawnData.hpp  EnnemyDeadData.hpp  EnnemyLifeData.hpp  EnnemyMoveData.hpp  EnnemyShootData.hpp  EntityDeadData.hpp  EntityLifeData.hpp  EntityMoveData.hpp  EntityShootData.hpp  EntitySpawnData.hpp  HitData.hpp  HubData.hpp  MapData.hpp  MoveData.hpp  Packet.hpp  PlayerData.hpp  ScoreData.hpp  ShootData.hpp  StartData.hpp  Status.hpp
Server/ecs/: AComponent.cpp  AComponent.hpp  Core.cpp  Entity.cpp  Entity.hpp  SceneManager.cpp
Server/ecs/components/: EnemyComponent.cpp  EnemyComponent.hpp  HitboxComponent.cpp  PositionComponent.hpp
Server/ecs/system/: ASystem.cpp  AudioSystem.hpp  GameSystem.cpp  GameSystem.hpp
client/: Connection.cpp  Connection.hpp  ConvertPath.cpp  ConvertPath.hpp  main.cpp
client/ecs/: AudioSystem.cpp  AudioSystem.hpp  Core.cpp  Core.hpp  EventSystem.cpp  EventSystem.hpp  GraphicSystem.cpp  GraphicSystem.hpp  WindowManager.cpp  WindowManager.hpp
client/ecs/components/: AEventComponent.hpp  AudioComponent.cpp  AudioComponent.hpp  BackgroundComponent.cpp  BackgroundComponent.hpp  BossComponent.cpp  BossComponent.hpp  BossLaserEyeComponent.cpp  BossLaserEyeComponent.hpp  BossLaserMouthComponent.cpp  BossLaserMouthComponent.hpp  ClickComponent.cpp  ClickComponent.hpp  ControlComponent.cpp  ControlComponent.hpp  EnemyComponent.cpp  EnemyComponent.hpp  EnemyDeathComponent.cpp  EnemyDeathComponent.hpp  EventComponent.cpp  EventComponent.hpp  MusicComponent.cpp  MusicComponent.hpp  MusicsComponent.cpp  MusicsComponent.hpp  PlayerBulletComponent.cpp  PlayerBulletComponent.hpp  PlayerComponent.cpp  PlayerComponent.hpp  ScoreBoardComponent.cpp  ScoreBoardComponent.hpp  ShootComponent.cpp  ShootComponent.hpp  SoundComponent.cpp  SoundComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TextComponent.cpp  TextComponent.hpp
client/ecs/models/: BossEntity.cpp  BossEntity.hpp  BossShootEntity.cpp  BossShootEntity.hpp  ButtonEntity.cpp  ButtonEntity.hpp  EnemyEntity.cpp  EnemyEntity.hpp  PlayerBullet.cpp  PlayerBullet.hpp  PlayerEntity.cpp  PlayerEntity.hpp  StaticBackgroundEntity.cpp  StaticBackgroundEntity.hpp
doc/html/: AComponent_8cpp.html  AComponent_8hpp.html  AComponent_8hpp.js  AComponent_8hpp_source.html  AudioSystem_8cpp.html  AudioSystem_8hpp.html  AudioSystem_8hpp.js  AudioSystem_8hpp_source.html  BackgroundComponent_8cpp.html  BackgroundComponent_8hpp.html  BackgroundComponent_8hpp.js  BackgroundComponent_8hpp_source.html  ButtonEntity_8hpp.html  ButtonEntity_8hpp.js  ButtonEntity_8hpp_source.html  ClickComponent_8cpp.html  ClickComponent_8hpp.html  ClickComponent_8hpp.js  ClickComponent_8hpp_source.html  ClientManager_8cpp.html  ClientManager_8hpp.html  ClientManager_8hpp.js  ClientManager_8hpp_source.html  Client_8cpp.html  Client_8hpp.html  Client_8hpp.js  Client_8hpp_source.html  Component_8hpp.html  Component_8hpp.js  Component_8hpp_source.html  ConnectData_8hpp.html  ConnectData_8hpp.js  ConnectData_8hpp_source.html  Connection_8cpp.html  Connection_8hpp.html  Connection_8hpp.js  Connection_8hpp_source.html  Core_8cpp.html  Core_8hpp.html  Core_8hpp.js  (+572 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+85 more)
doc_pages/: RFC.md  mainpage.md
doxygen-custom/: header.html
ecs/: AComponent.cpp  AComponent.hpp  Acomponent.hpp  Component.hpp  Core.cpp  Core.hpp  EnemyFactory.cpp  EnemyFactory.hpp  Entity.cpp  Entity.hpp  EntityFactory.cpp  EntityFactory.hpp  IComponent.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  core.hpp  entity.hpp  scene.hpp
ecs/components/: AGameComponent.cpp  AGameComponent.hpp  BackgroundComponent.cpp  BackgroundComponent.hpp  BossShootComponent.cpp  BossShootComponent.hpp  EnemyBulletComponent.cpp  EnemyBulletComponent.hpp  EnemyComponent.cpp  EnemyComponent.hpp  HealthComponent.cpp  HealthComponent.hpp  HitboxComponent.cpp  HitboxComponent.hpp  PlayerBulletComponent.cpp  PlayerComponent.cpp  PlayerComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  RotationComponent.cpp  RotationComponent.hpp  ScaleComponent.cpp  ScaleComponent.hpp  ShootComponent.cpp  ShootComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  VelocityComponent.cpp  VelocityComponent.hpp  healthComponent.hpp  scaleComponent.hpp  shootComponent.hpp
ecs/system/: ASystem.cpp  ASystem.hpp  AudioSystem.cpp  AudioSystem.hpp  EventSystem.cpp  EventSystem.hpp  GameSystem.cpp  GameSystem.hpp  GraphicSystem.cpp  GraphicSystem.hpp  ISystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  iSystem.hpp
server/: Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp  Server.cpp  Server.hpp  ServerCore.cpp  ServerCore.hpp  main.cpp
server/ecs/: CollisionSystem.cpp  CollisionSystem.hpp  WaveSystem.cpp  WaveSystem.hpp
(+30 files in other folders)
